trying to fix contact form on ios

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -516,7 +516,7 @@ body {
                 z-index: -2;
                 padding: 1em;
                 border-radius: 8px;
-                height: 100%;
+                height: 110%;
                 width: 80%;
                 box-shadow: 5px 5px 10px rgba(0, 0, 0, .7);
 
@@ -564,23 +564,23 @@ body {
                     cursor: pointer;
 
 
-                    // &::after {
-                    //     content: '';
-                    //     position: absolute;
-                    //     background-color: $accentColor;
-                    //     height: 1em;
-                    //     width: 30px;
-                    //     left: -2px;
-                    //     top: 50%;
-                    //     z-index: -1;
-                    //     transition: transform .3s;
-                    //     transform-origin: bottom left;
-                    // }
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        background-color: $accentColor;
+                        height: 1em;
+                        width: 30px;
+                        left: -2px;
+                        top: 50%;
+                        z-index: -1;
+                        transition: transform .3s;
+                        transform-origin: bottom left;
+                    }
 
-                    // &:hover::after,
-                    // &:focus:after {
-                    //     transform: scale(1.3, 2);
-                    // }
+                    &:hover::after,
+                    &:focus:after {
+                        transform: scale(1.3, 2);
+                    }
 
                 }
             }
